# Lie-Detector

./: .gitignore  README.md  all_readmes.md
classificators_and_data/: pyproject.toml  requirements.txt
classificators_and_data/EDA/: eda.ipynb  plots_for_paper.ipynb
classificators_and_data/data_extractor/: README.md
classificators_and_data/data_preprocessing/: example2.ipynb
classificators_and_data/data_processing/: data_processing.py
classificators_and_data/final_models/: ExampleLieModel.py  ExperimentManager.py  final_runs.ipynb
classificators_and_data/final_models/gs/: RandomForestModel.py  final_runs.ipynb
classificators_and_data/machine_learning/: config.py  ml_lib.py  preprocessing_lib.py  visualisation_lib.py
classificators_and_data/machine_learning/examples/: loading_the_data.ipynb
classificators_and_data/machine_learning/training/: attempt_1.ipynb  knn.ipynb  knn_test.ipynb  logistic_regression_features_approach.ipynb  random_forest.ipynb  random_forest_1.ipynb  random_forest_eeg_features_approach.ipynb  svc_eeg_features_approach.ipynb
classificators_and_data/neural_networks/: README.md  pyproject.toml  requirements.txt
classificators_and_data/neural_networks/ai/: train.py
classificators_and_data/neural_networks/ai/models/DGCNN/: 1730464951.py  1730466911.py  1730904997.py
classificators_and_data/neural_networks/ai/models/GRU/: 1730758943.py
classificators_and_data/neural_networks/ai/models/LSTM/: results.ipynb
experiment/: README.md  display_data.ipynb  pyproject.toml
experiment/src/assets/: celebrities_data.yaml  user_data.yaml  (+1 more)
(+18 files in other folders)
