[tool.poetry]
name = "ab"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torcheeg = "^1.1.2"
mne = "^1.8.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
tensorboard = "^2.17.1"
frozendict = "^2.4.6"
torch = {version = "^2.5.1+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.5.1+cu124", source = "pytorch-gpu-src"}


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
